--- a/src/app/pages/graficas1/graficas1.component.html
+++ b/src/app/pages/graficas1/graficas1.component.html
@@ -1,1 +1,43 @@
-<p>graficas1 works!</p>
+<div class="row">
+
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <h4> {{ graficos.grafico1.leyenda }} </h4>
+                <grafico-dona [chartData]="graficos.grafico1.data" [chartLabels]="graficos.grafico1.labels" [chartType]="graficos.grafico1.type"></grafico-dona>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <h4> {{ graficos.grafico2.leyenda }} </h4>
+                <grafico-dona [chartData]="graficos.grafico2.data" [chartLabels]="graficos.grafico2.labels" [chartType]="graficos.grafico2.type"></grafico-dona>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <h4> {{ graficos.grafico3.leyenda }} </h4>
+                <grafico-dona [chartData]="graficos.grafico3.data" [chartLabels]="graficos.grafico3.labels" [chartType]="graficos.grafico3.type"></grafico-dona>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <h4> {{ graficos.grafico4.leyenda }} </h4>
+                <grafico-dona [chartData]="graficos.grafico4.data" [chartLabels]="graficos.grafico4.labels" [chartType]="graficos.grafico4.type"></grafico-dona>
+
+            </div>
+        </div>
+    </div>
+
+</div>
