--- a/src/app/pages/account-settings/account-settings.component.html
+++ b/src/app/pages/account-settings/account-settings.component.html
@@ -9,20 +9,20 @@
                 <div class="r-panel-body">
                     <ul id="themecolors" class="m-t-20">
                         <li><b>Con el sidebar claro</b></li>
-                        <li><a data-theme="default" class="selector default-theme">1</a></li>
-                        <li><a data-theme="green" class="selector green-theme">2</a></li>
-                        <li><a data-theme="red" class="selector red-theme">3</a></li>
-                        <li><a data-theme="blue" class="selector blue-theme">4</a></li>
-                        <li><a data-theme="purple" class="selector purple-theme">5</a></li>
-                        <li><a data-theme="megna" class="selector megna-theme">6</a></li>
+                        <li><a #Link1 (click)="cambiarColor('default', Link1)" data-theme="default" class="selector default-theme">1</a></li>
+                        <li><a #Link2 (click)="cambiarColor('green', Link2)" data-theme="green" class="selector green-theme">2</a></li>
+                        <li><a #Link3 (click)="cambiarColor('red', Link3)" data-theme="red" class="selector red-theme">3</a></li>
+                        <li><a #Link4 (click)="cambiarColor('blue', Link4)" data-theme="blue" class="selector blue-theme">4</a></li>
+                        <li><a #Link5 (click)="cambiarColor('purple', Link5)" data-theme="purple" class="selector purple-theme">5</a></li>
+                        <li><a #Link6 (click)="cambiarColor('megna', Link6)" data-theme="megna" class="selector megna-theme">6</a></li>
 
                         <li class="d-block m-t-30"><b>Con el sidebar oscuro</b></li>
-                        <li><a data-theme="default-dark" class="selector default-dark-theme">7</a></li>
-                        <li><a data-theme="green-dark" class="selector green-dark-theme">8</a></li>
-                        <li><a data-theme="red-dark" class="selector red-dark-theme">9</a></li>
-                        <li><a data-theme="blue-dark" class="selector blue-dark-theme working">10</a></li>
-                        <li><a data-theme="purple-dark" class="selector purple-dark-theme">11</a></li>
-                        <li><a data-theme="megna-dark" class="selector megna-dark-theme">12</a></li>
+                        <li><a #Link7 (click)="cambiarColor('default-dark', Link7)" data-theme="default-dark" class="selector default-dark-theme">7</a></li>
+                        <li><a #Link8 (click)="cambiarColor('green-dark', Link8)" data-theme="green-dark" class="selector green-dark-theme">8</a></li>
+                        <li><a #Link9 (click)="cambiarColor('red-dark', Link9)" data-theme="red-dark" class="selector red-dark-theme">9</a></li>
+                        <li><a #Link10 (click)="cambiarColor('blue-dark', Link10)" data-theme="blue-dark" class="selector blue-dark-theme">10</a></li>
+                        <li><a #Link11 (click)="cambiarColor('purple-dark', Link11)" data-theme="purple-dark" class="selector purple-dark-theme">11</a></li>
+                        <li><a #Link12 (click)="cambiarColor('megna-dark', Link12)" data-theme="megna-dark" class="selector megna-dark-theme">12</a></li>
                     </ul>
 
                 </div>
