--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
                         <img [src]="usuario.img | imagen" alt="user" />
                         <span class="hide-menu">{{ usuario.nombre }}</span></a>
                     <ul aria-expanded="false" class="collapse">
-                        <li><a href="javascript:void()">My Profile </a></li>
+                        <li><a routerLinkActive="active" routerLink="/perfil">Perfil</a></li>
                         <li><a href="javascript:void()">My Balance</a></li>
                         <li><a href="javascript:void()">Inbox</a></li>
                         <li><a routerLink="/account-settings" routerLinkActive="active">Account Setting</a></li>
