--- a/src/app/pages/usuarios/usuarios.component.html
+++ b/src/app/pages/usuarios/usuarios.component.html
@@ -44,7 +44,7 @@
                     <tbody *ngFor="let usuario of usuarios">
                         <tr>
                             <td class="w70">
-                                <img [src]="usuario.img | imagen" class="img-50 img-circle">
+                                <img (click)="mostrarModal(usuario._id)" [src]="usuario.img | imagen" class="img-50 img-circle pointer">
                             </td>
                             <td>
                                 {{ usuario.email }}
@@ -53,18 +53,21 @@
                                 {{ usuario.nombre }}
                             </td>
                             <td>
-                                {{ usuario.role }}
+                                <select [(ngModel)]="usuario.role" name="role" class="form-control">
+                                    <option value="ADMIN_ROLE">ADMIN_ROLE</option>
+                                    <option value="USER_ROLE">USER_ROLE</option>
+                                </select>
                             </td>
                             <td>
                                 <label *ngIf=usuario.google class="label label-danger">Google</label>
                                 <label *ngIf=!usuario.google class="label label-primary">Normal</label>
                             </td>
                             <td>
-                                <button class="btn btn-primary">
+                                <button (click)="guardarUsuario(usuario)" class="btn btn-primary">
                                     <i class="fa fa-save"></i>
                                 </button>
 
-                                <button class="btn btn-danger">
+                                <button (click)="borrarUsuario(usuario)" class="btn btn-danger">
                                     <i class="fa fa-trash-o"></i>
                                 </button>
                             </td>
