--- a/src/app/pages/hospitales/hospitales.component.html
+++ b/src/app/pages/hospitales/hospitales.component.html
@@ -9,3 +9,61 @@
         </div>
     </div>
 </div>
+
+<div class="row animated zoomIn" *ngIf="cargando">
+
+    <div class="col-sm-12">
+        <div class="alert alert-warning text-center">
+            <strong>Cargando</strong>
+            <br>
+            <i class="fa fa-refresh fa-spin fa-2x"></i>
+            <br>
+            <span>Espere por favor</span>
+        </div>
+    </div>
+
+</div>
+
+<div class="row animated zoomIn" *ngIf="!cargando">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+
+                <h3 class="card-title"> Usuarios registrados ( <small>{{ totalRegistros }}</small> )</h3>
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Imagen</th>
+                            <th>Nombre</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody *ngFor="let hospital of hospitales">
+                        <tr>
+                            <td class="w70">
+                                <img (click)="mostrarModal(hospital._id)" [src]="hospital.img " class="img-50 img-circle pointer">
+                            </td>
+                            <td>
+                                {{ hospital.nombre }}
+                            </td>
+                            <td>
+                                <button (click)="guardarHospital(hospital)" class="btn btn-primary">
+                                    <i class="fa fa-save"></i>
+                                </button>
+
+                                <button (click)="borrarHospital(hospital)" class="btn btn-danger">
+                                    <i class="fa fa-trash-o"></i>
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <button (click)="cambiarDesde(-5)" class="btn btn-secondary">Anteriores</button>
+
+                <button (click)="cambiarDesde(5)" class="btn btn-secondary">Siguientes</button>
+
+            </div>
+        </div>
+    </div>
+</div>
